--- a/application/views/scripts/retablir/index.phtml
+++ b/application/views/scripts/retablir/index.phtml
@@ -1,27 +1,31 @@
-<h2>Rétablir</h2>
-<h2 class='label label-important'>Dossier supprimé</h2>
-<ul class='gridRetablir'>
-    <?php foreach($this->dossierSupprimer as $dossier) : ?>
-        <p><?= $dossier['USERNAME_UTILISATEUR'] ?></p>
-        <?= $this->partial('search/results/dossier.phtml', $dossier) ?>
-        <a id="retablissementDossier" class='btn-small' href=<?= "/dossier/retablir-dossier/idDossier/". $dossier['ID_DOSSIER'] ?>>
-            <em class="icon-ok icon-black"></em>
-            Rétablir le dossier
-        </a>
-    <?php endforeach ?>
-</ul>
+<?php if($this->is_allowed_retablir === 0 || empty($this->is_allowed_retablir)): ?>
+    <?= $this->partial('error/not-allowed.phtml') ?>
+<?php else:?>
+    <h2>Rétablir</h2>
+    <h2 class='label label-important'>Dossier supprimé</h2>
+    <ul class='gridRetablir'>
+        <?php foreach($this->dossierSupprimer as $dossier) : ?>
+            <p><?= $dossier['USERNAME_UTILISATEUR'] ?></p>
+            <?= $this->partial('search/results/dossier.phtml', $dossier) ?>
+            <a id="retablissementDossier" class='btn-small' href=<?= "/dossier/retablir-dossier/idDossier/". $dossier['ID_DOSSIER'] ?>>
+                <em class="icon-ok icon-black"></em>
+                Rétablir le dossier
+            </a>
+        <?php endforeach ?>
+    </ul>
 
+    <h2 class='label label-important'>Etablissement supprimé</h2>
 
-<h2 class='label label-important'>Etablissement supprimé</h2>
-<ul class='gridRetablir'>
-    <?php foreach($this->etablissementSupprimer as $etablissement) : ?>
-        <p><?= $etablissement['USERNAME_UTILISATEUR'] ?></p>
-        <div class='linkDisabled'>
-            <?= $this->partial('search/results/etablissement.phtml', $etablissement) ?>
-        </div>
-        <a id="retablissementEtablissement" class='btn-small ' href=<?= "/etablissement/retablir-etablissement/idEtablissement/". $etablissement['ID_ETABLISSEMENT'] ?>>
-            <em class="icon-ok icon-black"></em>
-            Rétablir l'établissement
-        </a>
-    <?php endforeach ?>
-</ul>
+    <ul class='gridRetablir'>
+        <?php foreach($this->etablissementSupprimer as $etablissement) : ?>
+            <p><?= $etablissement['USERNAME_UTILISATEUR'] ?></p>
+            <div class='linkDisabled'>
+                <?= $this->partial('search/results/etablissement.phtml', $etablissement) ?>
+            </div>
+            <a id="retablissementEtablissement" class='btn-small ' href=<?= "/etablissement/retablir-etablissement/idEtablissement/". $etablissement['ID_ETABLISSEMENT'] ?>>
+                <em class="icon-ok icon-black"></em>
+                Rétablir l'établissement
+            </a>
+        <?php endforeach ?>
+    </ul>
+<?php endif;?>
