--- a/application/views/scripts/search/etablissement.phtml
+++ b/application/views/scripts/search/etablissement.phtml
@@ -99,12 +99,20 @@
                     <?php endforeach ?>
                 </select>
             </span>
+
+            <select name="preventionniste" class='chosen' data-placeholder='Sélectionnez un préventionniste' onchange="masquerBoutonExportCalc()">
+                <option value=''></option>
+                <?php foreach( $this->liste_prev as $prev ) : ?>
+                    <option value='<?php echo $prev["ID_PREVENTIONNISTE"] ?>' <?php if(isset($_GET["preventionniste"]) && $prev["ID_PREVENTIONNISTE"] == $_GET["preventionniste"]) echo 'selected' ?>><?php echo $prev["NOM_UTILISATEURINFORMATIONS"]." ".$prev["PRENOM_UTILISATEURINFORMATIONS"] ?></option>
+                <?php endforeach ?>
+            </select>
+
         </div>
 
         <div style='margin-top: 4px;'>
             <select name='groupements_territoriaux[]' multiple onchange="masquerBoutonExportCalc()">
                 <?php foreach( $this->DB_groupementterritorial as $groupement ) : ?>
-                    <?php $selected = false; ?>                    
+                    <?php $selected = false; ?>
                     <?php if ($this->user['groupements'] != null): ?>
                         <?php foreach($this->user['groupements'] as $user_groupement): ?>
                             <?php if ($groupement['ID_GROUPEMENT'] == $user_groupement['ID_GROUPEMENT']): ?>
@@ -201,7 +209,10 @@
 		$("select[name='familles[]']").multiselect({header: false, noneSelectedText: "Toutes les familles"});
 		$("select[name='types_activites[]']").multiselect({header: false, noneSelectedText: "Tous les types d'activités"});
 		$("select[name='avis[]']").multiselect({header: false, noneSelectedText: "Tous les avis"});
-		$("select[name='presences_local_sommeil[]']").multiselect({header: false, noneSelectedText: "Qu'importe la présence de local à sommeil", minWidth: 300});
+
+        //$("select[name='preventionniste']").singleSelect({header: false, noneSelectedText: "Tous les préventionnistes"});
+
+        $("select[name='presences_local_sommeil[]']").multiselect({header: false, noneSelectedText: "Qu'importe la présence de local à sommeil", minWidth: 300});
         $("select[name='commissions[]']").multiselect({header: false, noneSelectedText: "Toutes les commissions"});
         $("select[name='groupements_territoriaux[]']").multiselect({header: false, noneSelectedText: "Tous les groupements territoriaux", minWidth: 300});
 
@@ -322,6 +333,12 @@
             $('form#zone_de_recherche_modal').modal('hide');
         });
 	});
+
+    // Gestion des select et multiselect
+    $(".chosen").chosen({
+        allow_single_deselect: true
+    });
+
 
     function masquerBoutonExportCalc ()
     {
