--- a/public/css/formulaire/descriptif.css
+++ b/public/css/formulaire/descriptif.css
@@ -8,6 +8,7 @@
     margin-bottom: 25px;
 }
 
-#affichage-informations .text-control {
-    padding-top: 5px;
+.addRow {
+    display: block;
+    margin: auto;
 }
