--- a/application/views/scripts/formulaire/partials/partial-input-champ.phtml
+++ b/application/views/scripts/formulaire/partials/partial-input-champ.phtml
@@ -3,18 +3,18 @@
     case 1: ?>
         <input
             type='text'
-            name='<?= isset($this->idxTableau) ? $this->champ['STR_DATA']  : 'champ-'.htmlspecialchars($this->champ["ID_CHAMP"])?>'
+            name='<?= isset($this->idxTableau) ? $this->champ['STR_DATA']  : 'champ-'.htmlspecialchars($this->champ["ID_CHAMP"]) ?>'
             value='<?= htmlspecialchars($this->champ['VALEUR'], ENT_QUOTES) ?>'
-            <?= $this->canWrite ? '': 'disabled'?>
+            <?= $this->canWrite ? '' : 'disabled' ?>
         >
     <?php break;
     // Texte long
     case 2: ?>
-        <textarea name='<?= isset($this->idxTableau) ? $this->champ['STR_DATA'] : 'champ-'.htmlspecialchars($this->champ["ID_CHAMP"])?>' <?= $this->canWrite ? '': 'disabled'?>><?= htmlspecialchars($this->champ['VALEUR'], ENT_QUOTES) ?></textarea>
+        <textarea name='<?= isset($this->idxTableau) ? $this->champ['STR_DATA'] : 'champ-'.htmlspecialchars($this->champ["ID_CHAMP"])?>' <?= $this->canWrite ? '' : 'disabled' ?>><?= htmlspecialchars($this->champ['VALEUR'], ENT_QUOTES) ?></textarea>
     <?php break;
     // Liste
     case 3: ?>
-        <select name='<?= isset($this->idxTableau) ? $this->champ['STR_DATA']: 'champ-'.htmlspecialchars($this->champ["ID_CHAMP"])?>' <?= $this->canWrite ? '': 'disabled'?>>
+        <select name='<?= isset($this->idxTableau) ? $this->champ['STR_DATA']: 'champ-'.htmlspecialchars($this->champ["ID_CHAMP"])?>' <?= $this->canWrite ? '' : 'disabled' ?>>
             <option selected value>Sélectionnez un élément</option>
             <?php foreach($this->champsvaleurliste[$this->champ['ID_CHAMP']] as $champvaleurliste): ?>
                 <option
@@ -28,7 +28,7 @@
     <?php break;
     // Nombre
     case 4: ?>
-        <input type='number' name='<?= isset($this->idxTableau) ? $this->champ['STR_DATA']  : 'champ-'.htmlspecialchars($this->champ["ID_CHAMP"])?>' <?= $this->canWrite ? '': 'disabled'?> min='0' value='<?= $this->champ['VALEUR'] ?>'>
+        <input type='number' name='<?= isset($this->idxTableau) ? $this->champ['STR_DATA']  : 'champ-'.htmlspecialchars($this->champ["ID_CHAMP"])?>' <?= $this->canWrite ? '' : 'disabled' ?> min='0' value='<?= $this->champ['VALEUR'] ?>'>
     <?php break;
     // Case à cocher
     case 5: ?>
@@ -36,29 +36,25 @@
             type="hidden"
             name='<?= isset($this->idxTableau) ? $this->champ['STR_DATA']  : 'champ-'.htmlspecialchars($this->champ["ID_CHAMP"])?>'
             value="0"
-            <?= $this->canWrite ? '': 'disabled'?>
+            <?= $this->canWrite ? '' : 'disabled' ?>
         >
         <input
             type="checkbox"
             name='<?= isset($this->idxTableau) ? $this->champ['STR_DATA']  : 'champ-'.htmlspecialchars($this->champ["ID_CHAMP"])?>'
             value="1"
-            <?= $this->canWrite ? '': 'disabled'?>
+            <?= $this->canWrite ? '' : 'disabled' ?>
             <?= $this->champ['VALEUR'] ? 'checked' : '' ?>
         >
     <?php break;
     // Parent
     case 6:?>
         <?php if(intval(empty($this->champ['tableau']) ? 0 : $this->champ['tableau']) === 1) : ?>
-            <?php if(isset($this->canWrite) ? $this->canWrite : false) :?>
-                <!-- [button type='button'] pour desactiver le submit auto suite a un clic de bouton -->
-                <button type='button' class='btn addRow btnAddRowTable' idparent=<?= $this->champ['ID_CHAMP']?> >Ajouter ligne</button>
-            <?php endif ?>
-            <table class='table table-striped '>
+            <table class='table table-hover'>
                 <thead>
                     <tr>
-                    <?php if(isset($this->canWrite) ? $this->canWrite : true) :?>
-                            <th>#</th>
-                    <?php endif ?>
+                        <?php if ($this->canWrite): ?>
+                            <th></th>
+                        <?php endif ?>
                         <?php foreach($this->champ['FILS'] as $champsFils) :?>
                             <?php if(!empty($champsFils['NOM'])) : ?>
                                 <th>
@@ -66,20 +62,22 @@
                                 </th>
                             <?php endif ?>
                         <?php endforeach ?>
-                        <?php if(isset($this->canWrite) ? $this->canWrite : true) :?>
+                        <?php if($this->canWrite) :?>
                             <th>Supprimer</th>
                         <?php endif ?>
                     </tr>
                 </thead>
                 <tbody id= <?= 'tbody-'.$this->champ['ID_CHAMP'] ?> class='grp'>
-                    <tr class='ligneTableau hidden'>
-                        <?= $this->partial('formulaire/partials/tableau/partial-input-tableau.phtml',
-                            [
-                                'inputs' => $this->champ['FILS']['INPUTS'],
-                                'champsvaleurliste' => $this->champsvaleurliste
-                            ]);
-                        ?>
-                    </tr>
+                    <?php if ($this->canWrite): ?>
+                        <tr class='ligneTableau hidden'>
+                            <?= $this->partial('formulaire/partials/tableau/partial-input-tableau.phtml',
+                                [
+                                    'inputs' => $this->champ['FILS']['INPUTS'],
+                                    'champsvaleurliste' => $this->champsvaleurliste
+                                ]);
+                            ?>
+                        </tr>
+                    <?php endif ?>
                     <?= $this->partial('formulaire/partials/tableau/partial-tableau.phtml', [
                             'colonnesChamp' => $this->champ['FILS'],
                             'champsvaleurliste' => $this->champsvaleurliste,
@@ -88,6 +86,10 @@
                     ?>
                 </tbody>
             </table>
+            <?php if ($this->canWrite): ?>
+                <!-- [button type='button'] pour desactiver le submit auto suite a un clic de bouton -->
+                <button type='button' class='btn btn-info addRow' idparent=<?= $this->champ['ID_CHAMP'] ?>>Ajouter une ligne</button>
+            <?php endif ?>
         <?php else : ?>
             <div class="tableInput">
                 <?php foreach ($this->champ["FILS"] as $champsFils): ?>
