--- a/application/views/scripts/formulaire/partials/partial-input-champ.phtml
+++ b/application/views/scripts/formulaire/partials/partial-input-champ.phtml
@@ -48,7 +48,7 @@
     <?php break;
     // Parent
     case 6:?>
-        <?php if(intval(empty($this->champ['tableau']) ? 0 : $this->champ['tableau']) === 1) : ?>
+        <?php if(1 === $this->champ['tableau']) : ?>
             <table class='table table-hover'>
                 <thead>
                     <tr>
