--- a/application/views/scripts/index/partials/etablissements_bloc.phtml
+++ b/application/views/scripts/index/partials/etablissements_bloc.phtml
@@ -1,7 +1,7 @@
 <div id="<?php echo $this->id ?>" class="panel panel-default <?php echo $this->width != 'small' ? 'w2' : '' ?> empty folded">
   <div class="panel-heading">
       <i class="icon icon-chevron-right"></i>
-    <?php echo $this->title ?>
+    <?= $this->title.'('.($this->count ?? 'NA').')' ?>
   </div>
   <div class="panel-body" style="display:none">
       <img src="/images/load.gif" />
