--- a/application/views/scripts/calendrier-des-commissions/generationcompterendu.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationcompterendu.phtml
@@ -224,8 +224,7 @@ if (file_exists(REAL_DATA_PATH.DIRECTORY_SEPARATOR."uploads".DIRECTORY_SEPARATOR
                                 $rubrique['NOM']
                             );
                             foreach ($rubrique['CHAMPS'] as $champ) {
-                                //Si le champ est un champ Parent alors ....
-                                if($champ['ID_TYPECHAMP'] === 6){
+                                if ('Parent' === $champ['TYPE']) {
                                     if (1 === $champ['tableau']) {
                                         foreach ($champ['FILS'] as $idx => $champFils) {
                                             if(is_int($idx)){
@@ -260,8 +259,7 @@ if (file_exists(REAL_DATA_PATH.DIRECTORY_SEPARATOR."uploads".DIRECTORY_SEPARATOR
                                                 $idxCol = 0;
 
                                                 foreach ($ligne as $col) {
-                                                    // FIXME Avoir le type en texte et pas l'ID, comme pour les autres endroits où cette condition est appelée
-                                                    if (5 === $col['ID_TYPECHAMP']) {
+                                                    if ('Case à cocher' === $col['TYPE']) {
                                                         if (true === boolval($col['VALEUR'])) {
                                                             $col['VALEUR'] = 'Oui';
                                                         } else {
@@ -275,7 +273,6 @@ if (file_exists(REAL_DATA_PATH.DIRECTORY_SEPARATOR."uploads".DIRECTORY_SEPARATOR
 
                                                 $segmentTableau->merge();
                                             }
-
                                         }
 
                                         $segmentTableau = null;
