Corrections sur la génération des documents types

--- a/application/views/scripts/calendrier-des-commissions/generationcompterendu.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationcompterendu.phtml
@@ -197,7 +197,11 @@ if (file_exists(REAL_DATA_PATH.DIRECTORY_SEPARATOR."uploads".DIRECTORY_SEPARATOR
                     } else {
                         addChamp($avisDerogations, 'type', '');
                         addChamp($avisDerogations, 'titre', '');
-                        addChamp($avisDerogations, 'informations', '');
+                        addChamp($avisDerogations, 'objet', '');
+                        addChamp($avisDerogations, 'justification', '');
+                        addChamp($avisDerogations, 'articles_concernes', '');
+                        addChamp($avisDerogations, 'mesures_compensatoires_proposees', '');
+                        addChamp($avisDerogations, 'analyse_de_risque', '');
                         addChamp($avisDerogations, 'avis', '');
                         addChamp($avisDerogations, 'identifiantdossierleve', '');
                         addChamp($avisDerogations, 'affichagehistorique', '');
