--- a/application/views/scripts/calendrier-des-commissions/generationconvoc.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationconvoc.phtml
@@ -337,7 +337,11 @@ function retrieveInfoDossier($segment, $dossierInfos) {
         } else {
             setVars($avisDerogations, 'type', '');
             setVars($avisDerogations, 'titre', '');
-            setVars($avisDerogations, 'informations', '');
+            setVars($avisDerogations, 'objet', '');
+            setVars($avisDerogations, 'justification', '');
+            setVars($avisDerogations, 'articles_concernes', '');
+            setVars($avisDerogations, 'mesures_compensatoires_proposees', '');
+            setVars($avisDerogations, 'analyse_de_risque', '');
             setVars($avisDerogations, 'avis', '');
             setVars($avisDerogations, 'identifiantdossierleve', '');
             setVars($avisDerogations, 'affichagehistorique', '');
