--- a/application/views/scripts/dossier/creationdoc.phtml
+++ b/application/views/scripts/dossier/creationdoc.phtml
@@ -766,8 +766,7 @@ foreach ($this->formulaires as $formulaire) {
         );
 
         foreach ($rubrique['CHAMPS'] as $champ) {
-            //Si le champ est un champ Parent alors ....
-            if ($champ['ID_TYPECHAMP'] === 6) {
+            if ('Parent' === $champ['TYPE']) {
                 if (1 === $champ['tableau']) {
                     foreach ($champ['FILS'] as $idx => $champFils) {
                         if(is_int($idx)){
@@ -802,8 +801,7 @@ foreach ($this->formulaires as $formulaire) {
                             $idxCol = 0;
 
                             foreach ($ligne as $col) {
-                                // FIXME Avoir le type en texte et pas l'ID, comme pour les autres endroits où cette condition est appelée
-                                if (5 === $col['ID_TYPECHAMP']) {
+                                if ('Case à cocher' === $col['TYPE']) {
                                     if (true === boolval($col['VALEUR'])) {
                                         $col['VALEUR'] = 'Oui';
                                     } else {
@@ -822,24 +820,6 @@ foreach ($this->formulaires as $formulaire) {
                     $odf->mergeSegment($segmentTableau);
                 } else {
                     foreach ($champ['FILS'] as $champFils) {
-                        $corpsNomenclature = [];
-
-                        //Si le parent est un tableau alors on ajoute l'index du fils dans le nom
-                        if ($champ['tableau'] === 1) {
-                            $corpsNomenclature = [
-                                $rubrique['NOM'],
-                                $champ['NOM'],
-                                $champFils['NOM'],
-                                $champFils['idx']
-                            ];
-                        } else {
-                            $corpsNomenclature = [
-                                $rubrique['NOM'],
-                                $champ['NOM'],
-                                $champFils['NOM']
-                            ];
-                        }
-
                         if ('Case à cocher' === $champFils['TYPE']) {
                             if (true === boolval($champFils['VALEUR'])) {
                                 $champFils['VALEUR'] = 'Oui';
@@ -851,7 +831,11 @@ foreach ($this->formulaires as $formulaire) {
                             $odf,
                             $serviceUtils->getFullFusionName(
                                 $formulaire['NOM_INTERNE'],
-                                $corpsNomenclature
+                                [
+                                    $rubrique['NOM'],
+                                    $champ['NOM'],
+                                    $champFils['NOM']
+                                ]
                             ),
                             $champFils['VALEUR']
                         );
