Correction sur la récupération du nombre d'éléments

--- a/application/views/scripts/index/partials/dossiers_bloc.phtml
+++ b/application/views/scripts/index/partials/dossiers_bloc.phtml
@@ -1,7 +1,7 @@
 <div id="<?php echo $this->id ?>" class="panel panel-default <?php echo $this->width != 'small' ? 'w2' : '' ?> empty folded">
   <div class="panel-heading">
     <i class="icon icon-chevron-right"></i>
-    <?= $this->title.' ('.count($this->data).')' ?>
+    <?= $this->title.' ('.($this->count ?? 0).')' ?>
   </div>
   <div class="panel-body" style="display:none">
       <img src="/images/load.gif" />
