--- a/application/views/scripts/index/partials/odj_bloc.phtml
+++ b/application/views/scripts/index/partials/odj_bloc.phtml
@@ -2,7 +2,7 @@
   <div class="panel-heading">
     <i class="icon icon-chevron-right"></i>
     Ordre du jour des prochaines commissions
-    <?= $this->title.'('.($this->count ?? 'NA').')' ?>
+    <?= $this->title.' ('.($this->count ?? 0).')' ?>
 
   </div>
   <div class="panel-body" style="font-size: .85em;display:none">
