--- a/application/views/scripts/dossier/effectifs-degagements-dossier.phtml
+++ b/application/views/scripts/dossier/effectifs-degagements-dossier.phtml
@@ -1,21 +1,18 @@
-<div class='pull-right'>
-    <a href="<?= $this->url(array('controller' => 'dossier', 'action' => 'effectifs-degagements-dossier-edit', 'id' => $this->idDossier), false, true) ?>" class="btn">Modifier les effectifs et dégagements</a>
+<div class='pull-right' >
+    <a class='btn' href="<?= $this->url(array('action' => 'effectifs-degagements-dossier-edit')) ?>">Modifier les effectifs et dégagements</a>
 </div>
 
-<h3>Effectifs :</h3>
-<?php
-    if (isset($this->EffectifDegagement) && '' !== $this->EffectifDegagement["DESCRIPTION_EFFECTIF"]) {
-        echo $this->EffectifDegagement["DESCRIPTION_EFFECTIF"];
-    } else {
-        echo "Aucune description";
-    }
-?>
+<div id='descriptif-personnalise'>
+    <h3>Effectifs et Dégagements</h3>
 
-<h3>Dégagements :</h3>
-<?php
-    if (isset($this->EffectifDegagement) && '' !== $this->EffectifDegagement["DESCRIPTION_DEGAGEMENT"]) {
-        echo $this->EffectifDegagement["DESCRIPTION_DEGAGEMENT"];
-    } else {
-        echo "Aucune description";
-    }
-?>
+    <h4 class='h4_subtitle'>Rubriques</h4>
+    <?= $this->partialLoop('formulaire/partials/partial-rubrique-display.phtml', $this->rubriques) ?>
+
+    <div id='affichage-informations' class='form-horizontal'>
+        <?= $this->partial('formulaire/partials/partial-form-custom.phtml', [
+            'rubriques' => $this->rubriques,
+            'champsvaleurliste' => $this->champsvaleurliste,
+            'canWrite' => false
+        ]); ?>
+    </div>
+</div>
