--- a/application/views/scripts/dossier/creationdoc.phtml
+++ b/application/views/scripts/dossier/creationdoc.phtml
@@ -90,7 +90,7 @@ try{
     $nbPrev = count($this->preventionnistes);
     foreach($this->preventionnistes as $prev) {
         if (array_key_exists("GRADE_UTILISATEURINFORMATIONS", $prev)) {
-            addChamp($preventionniste, 'grade', $prev['GRADE_UTILISATEURINFORMATIONS']);    
+            addChamp($preventionniste, 'grade', $prev['GRADE_UTILISATEURINFORMATIONS']);
         }
         addChamp($preventionniste, 'nom', $prev['NOM_UTILISATEURINFORMATIONS']);
         if ($nbPrev > 1) {
@@ -123,6 +123,25 @@ try{
     }
     $odf->mergeSegment($preventionnisteTel);
 } catch (OdfException $e) {
+
+}
+
+try{
+    $preventionnisteMail = $odf->setSegment('preventionnistesMail');
+    $nbPrev = count($this->preventionnistes);
+    foreach($this->preventionnistes as $prev) {
+        if ($nbPrev > 1) {
+            $sep = ", ";
+        } else {
+            $sep = " ";
+        }
+        addChamp($preventionnisteMail, 'mail', $prev['MAIL_UTILISATEURINFORMATIONS'].$sep);
+        $preventionnisteMail->merge();
+        $nbPrev--;
+    }
+    $odf->mergeSegment($preventionnisteMail);
+
+}catch(OdfException $e){
 
 }
 
@@ -168,7 +187,7 @@ try{
     foreach($this->listeDocsAjout as $documentAjout) {
         addChamp($docAjout, 'exist', "X");
         addChamp($docAjout, 'libelledoc', $documentAjout['LIBELLE_DOCAJOUT']);
-        addChamp($docAjout, 'refdoc', $documentAjout['REF_DOCAJOUT']); 
+        addChamp($docAjout, 'refdoc', $documentAjout['REF_DOCAJOUT']);
         if ($documentAjout['DATE_DOCAJOUT']) {
             if ($documentAjout['DATE_DOCAJOUT'] != "0000-00-00") {
                 $date = new Zend_Date($documentAjout['DATE_DOCAJOUT'], Zend_Date::DATES);
@@ -176,7 +195,7 @@ try{
             } else {
                 $date = "";
             }
-        } 
+        }
         if (isset($date) && $date != '') {
             addChamp($docAjout, 'datedoc', $date);
         } else {
@@ -238,7 +257,7 @@ if (!function_exists('addPrescription')) {
                         if ($cpt)
                         {
                             addChamp($prescription, 'num', $listePrescription[$i][0]['NUM_PRESCRIPTION_DOSSIER']);
-                            
+
                             if ( $listePrescription[$i][0]['LIBELLE_PRESCRIPTION_DOSSIER'] == '')
                             {
                                 addChamp($prescription, 'libelle', $listePrescription[$i][0]['PRESCRIPTIONTYPE_LIBELLE']);
@@ -354,12 +373,12 @@ if ($this->id_typeactivite == 29) {
             foreach($this->celluleDossier as $cellulesInfos => $cellule) {
                 addChamp($cellulesPresc, 'libelleCellule', $cellule['LIBELLE_ETABLISSEMENTINFORMATIONS']);
                 if ($this->idDossier == $cellule['ID_DOSSIER']) {
-                    addPrescriptionCC($cellule['regl'],0,$cellulesPresc);    
+                    addPrescriptionCC($cellule['regl'],0,$cellulesPresc);
                 } else {
                     $val = array();
-                    addPrescriptionCC($val,0,$cellulesPresc);    
+                    addPrescriptionCC($val,0,$cellulesPresc);
                 }
-                
+
                 addPrescriptionCC($cellule['exploit'],1,$cellulesPresc);
                 addPrescriptionCC($cellule['amelio'],2,$cellulesPresc);
                 $cellulesPresc->merge();
@@ -388,7 +407,7 @@ if ($this->id_typeactivite == 29) {
 } else {
     addPrescription($this->prescriptionReglDossier,0,$odf);
     addPrescription($this->prescriptionExploitation,1,$odf);
-    addPrescription($this->prescriptionAmelioration,2,$odf);    
+    addPrescription($this->prescriptionAmelioration,2,$odf);
 }
 
 //PARTIE TEXTE APPLICABLE
@@ -709,7 +728,7 @@ if ($this->GN == 2) {
 
 try{
     $chemin = null;
-    
+
     if ($this->infosDossier['ID_PLATAU'] !== null) {
         $chemin = implode(DS, array(
             REAL_DATA_PATH,
