--- a/public/css/main.css
+++ b/public/css/main.css
@@ -829,8 +829,6 @@ text-decoration: none;
     box-shadow: none;
 }
 
-
-
 .nav-tabs.nav-stacked.menu_dashboard>li>a {
   border-radius: 0px;
   border-top: 1px solid #fff;
@@ -876,7 +874,6 @@ text-decoration: none;
   width: 1%;
 }
 
-
 .sidebar {
   background-color: #f4f4f4;
   display: inline-block;
@@ -902,7 +899,6 @@ text-decoration: none;
 {
   background: #f9f9f9;
 }
-
 
 .list-group {
   padding-left: 0;
@@ -1260,6 +1256,7 @@ dl.champ_effectif_camping dd input {
     display: grid;
     grid-template-columns: 1fr 10fr 2fr;
     text-align: center;
+    list-style: none;
 }
 
 .linkDisabled{
