--- a/application/views/scripts/retablir/index.phtml
+++ b/application/views/scripts/retablir/index.phtml
@@ -1,17 +1,17 @@
-<!-- TODO: Si juste un des 2 autorisé, permettre l'édition uniquement sur ce dernier -->
 <?php if (!$this->is_allowed_delete_dossier && !$this->is_allowed_delete_etablissement): ?>
     <?= $this->partial('error/not-allowed.phtml') ?>
 <?php else: ?>
     <h2>Rétablir</h2>
 
-    <?= $this->partial('retablir/partials/partial-deleted-elements.phtml', [
-        'element' => 'dossier',
-        'data' => $this->dossiersSupprimes
-    ]) ?>
+    <?php if ($this->is_allowed_delete_dossier): ?>
+        <?= $this->partial('retablir/partials/partial-deleted-dossiers.phtml', [
+            'data' => $this->dossiersSupprimes
+        ]) ?>
+    <?php endif ?>
 
-    <?= $this->partial('retablir/partials/partial-deleted-elements.phtml', [
-        'element' => 'etablissement',
-        'data' => $this->etablissementsSupprimes,
-        'disableLink' => true
-    ]) ?>
+    <?php if ($this->is_allowed_delete_etablissement): ?>
+        <?= $this->partial('retablir/partials/partial-deleted-etablissements.phtml', [
+            'data' => $this->etablissementsSupprimes
+        ]) ?>
+    <?php endif ?>
 <?php endif ?>
