--- a/application/views/scripts/formulaire/edit-rubrique.phtml
+++ b/application/views/scripts/formulaire/edit-rubrique.phtml
@@ -6,6 +6,12 @@
 <div class="row-fluid">
     <h3>Informations sur la rubrique</h3>
     <div class="span4 infos-rubrique">
+        <?= $this->partial(
+            'formulaire/partials/partial-champ-nom-fusion.phtml',
+            [
+                'champFusionName' => $this->champFusionName
+            ]
+        ) ?>
         <!-- TODO: Utiliser le formulaire de Zend -->
         <form action class="form-inline" method="post">
             <input type="hidden" id="rubrique-id" value="<?= $this->rubrique['ID_RUBRIQUE'] ?>">
@@ -28,7 +34,7 @@
                 >
             </div>
 
-            <div class="pull-right">
+            <div class="pull-left">
                 <a href="<?= $this->url(['controller' => 'formulaire', 'action' => 'index'], null, true) ?>" type="button" class="btn">Annuler</a>
                 <button type="submit" class="btn btn-success">Sauvegarder la rubrique</button>
             </div>
