--- a/application/views/scripts/formulaire/edit-champ.phtml
+++ b/application/views/scripts/formulaire/edit-champ.phtml
@@ -42,12 +42,15 @@
     </div>
 
     <div class="span6 offset2 infos-champ">
-        <?= $this->partial(
-            'formulaire/partials/partial-champ-nom-fusion.phtml',
-            [
-                'champFusionName' => $this->champFusionName
-            ]
-        ) ?>
+        <?php if (null !== $this->champFusionName): ?>
+            <?= $this->partial(
+                'formulaire/partials/partial-champ-nom-fusion.phtml',
+                [
+                    'champFusionName' => $this->champFusionName
+                ]
+            ) ?>
+        <?php endif ?>
+
         <form action class="span12 form-inline" method="post">
             <input type="hidden" id="rubrique-id" value="<?= $this->rubrique['ID_RUBRIQUE'] ?>">
             <div>
