--- a/application/views/scripts/formulaire/edit-champ.phtml
+++ b/application/views/scripts/formulaire/edit-champ.phtml
@@ -42,11 +42,11 @@
     </div>
 
     <div class="span6 offset2 infos-champ">
-        <?php if (null !== $this->champFusionName): ?>
+        <?php if (null !== $this->champFusionValue): ?>
             <?= $this->partial(
                 'formulaire/partials/partial-champ-nom-fusion.phtml',
                 [
-                    'champFusionName' => $this->champFusionName
+                    'champFusionValue' => $this->champFusionValue
                 ]
             ) ?>
         <?php endif ?>
