--- a/application/views/scripts/formulaire/partials/partial-champ-nom-fusion.phtml
+++ b/application/views/scripts/formulaire/partials/partial-champ-nom-fusion.phtml
@@ -1,3 +1,3 @@
-<div class="span12 text-info">
-    Champ de fusion : {<?= $this->champFusionName ?>}
+<div class="span12 alert alert-info">
+    Nom du champ de fusion : {<?= $this->champFusionValue ?>}
 </div>
